--- a/Menu 2/tra_sua.html
+++ b/Menu 2/tra_sua.html
@@ -696,7 +696,7 @@
             <button class="menu-toggle" onclick="toggleMenu()" aria-label="Mở menu" aria-expanded="false"></button>
             <nav role="navigation">
                 <ul>
-                    <li><a href="../index.html">index</a></li>
+                    <li><a href="../index.html">Trang chủ</a></li>
                     <li><a href="../Menu 2/menu.html">Menu Mixue</a></li>
                     <li><a href="../Giới thiệu/giới thiệu mixue.html">Giới Thiệu</a></li>
                     <li><a href="../Liên hệ/liên hệ.html">Liên Hệ</a></li>
