--- a/Menu 2/menu.html
+++ b/Menu 2/menu.html
@@ -921,7 +921,7 @@
     <!-- Header Section -->
     <header id="top">
         <div class="logo">
-            <a href="../Trang chủ.html" title="Mixue Logo">
+            <a href="../index.html" title="Mixue Logo">
                 <img src="../img/logo_mixue.webp" alt="Mixue Logo" loading="lazy">
             </a>
         </div>
@@ -929,7 +929,7 @@
             <button class="menu-toggle" onclick="toggleMenu()" aria-label="Mở menu" aria-expanded="false"></button>
             <nav role="navigation">
                 <ul>
-                    <li><a href="../Trang chủ.html">Trang Chủ</a></li>
+                    <li><a href="../index.html">Trang Chủ</a></li>
                     <li><a href="../Menu 2/menu.html">Menu Mixue</a></li>
                     <li><a href="../Giới thiệu/giới thiệu mixue.html">Giới Thiệu</a></li>
                     <li><a href="../Liên hệ/liên hệ.html">Liên Hệ</a></li>
