--- a/Liên hệ/liên hệ.html
+++ b/Liên hệ/liên hệ.html
@@ -503,7 +503,7 @@
             <button class="menu-toggle" onclick="toggleMenu()" aria-label="Mở menu" aria-expanded="false"></button>
             <nav role="navigation">
                 <ul>
-                    <li><a href="../Trang chủ.html">Trang Chủ</a></li>
+                    <li><a href="../index.html">Trang Chủ</a></li>
                     <li><a href="../Menu 2/menu.html">Menu Mixue</a></li>
                     <li><a href="../Giới thiệu/giới thiệu mixue.html">Giới Thiệu</a></li>
                     <li><a href="./liên hệ.html">Liên Hệ</a></li>
@@ -657,7 +657,7 @@
             <div class="footer-column-col-3">
                 <h3>Về chúng tôi</h3>
                 <ul>
-                    <li><a href="../Trang chủ.html">Trang chủ</a></li>
+                    <li><a href="../index.html">Trang chủ</a></li>
                     <li><a href="../Menu 2/menu.html">Menu Mixue</a></li>
                     <li><a href="../Giới thiệu/giới thiệu mixue.html">Giới thiệu</a></li>
                     <li><a href="./liên hệ.html">Liên hệ</a></li>
