--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
     <!-- Header Section -->
     <header id="top">
         <div class="logo">
-            <a href="./Trang chủ.html" title="Mixue Logo">
+            <a href="./index.html" title="Mixue Logo">
                 <img src="./img/logo_mixue.webp" alt="Mixue Logo" loading="lazy">
             </a>
         </div>
@@ -820,7 +820,7 @@
             <button class="menu-toggle" onclick="toggleMenu()" aria-label="Mở menu" aria-expanded="false"></button>
             <nav class="navbar" role="navigation">
                 <ul>
-                    <li><a href="./Trang chủ.html">Trang Chủ</a></li>
+                    <li><a href="./index.html">Trang Chủ</a></li>
                     <li><a href="./Menu 2/menu.html">Menu Mixue</a></li>
                     <li><a href="./Giới thiệu/giới thiệu mixue.html">Giới Thiệu</a></li>
                     <li><a href="./Liên hệ/liên hệ.html">Liên Hệ</a></li>
@@ -933,7 +933,7 @@
             <div class="footer-column-col-3">
                 <h3>Về chúng tôi</h3>
                 <ul>
-                    <li><a href="./Trang chủ.html">Trang Chủ</a></li>
+                    <li><a href="./index.html">Trang Chủ</a></li>
                     <li><a href="./Menu 2/menu.html">Menu Mixue</a></li>
                     <li><a href="./Giới thiệu/giới thiệu mixue.html">Giới Thiệu</a></li>
                     <li><a href="./Liên hệ/liên hệ.html">Liên Hệ</a></li>
