--- a/Menu 2/menu.html
+++ b/Menu 2/menu.html
@@ -1007,8 +1007,7 @@
                     <div class="icon_layout">
                         <img src="../img/icon_email.png" style="width: 30px; height: auto;" loading="lazy">
                     </div>
-                    <p>Email: <a href="/cdn-cgi/l/email-protection" class="__cf_email__"
-                            data-cfemail="c2aeabb7b3b7a3aca8abac82b8b8afbaa0a1eca1adaf">[email&#160;protected]</a></p>
+                    <p>Email: mixuevietnam@gmail.com </p>
                 </div>
             </div>
         </div>
